gold-lang-lsp/parser/gold_parser.go
// Code generated from antlr4/Gold.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Gold
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GoldParser struct {
	*antlr.BaseParser
}

var GoldParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func goldParserInit() {
	staticData := &GoldParserStaticData
	staticData.LiteralNames = []string{
		"", "'class'", "'('", "')'", "'module'", "'procedure'", "'proc'", "','",
		"'end'", "'endproc'", "'function'", "'func'", "':'", "'var'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "PARAMETER_MODIFIER",
		"WHITESPACE", "INT_LITERAL", "DEICMAL_LITERAL", "STRING_LITERAL", "ID",
	}
	staticData.RuleNames = []string{
		"goldProg", "goldDefinition", "goldClassDefinition", "goldModuleDefinition",
		"goldProcedureDefinition", "goldFunctionDefinition", "parameterDefinition",
		"statement", "variableDefinition", "varType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GoldParserInit initializes any static state used to implement GoldParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGoldParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GoldParserInit() {
	staticData := &GoldParserStaticData
	staticData.once.Do(goldParserInit)
}

// NewGoldParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGoldParser(input antlr.TokenStream) *GoldParser {
	GoldParserInit()
	this := new(GoldParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GoldParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Gold.g4"

	return this
}

// GoldParser tokens.
const (
	GoldParserEOF                = antlr.TokenEOF
	GoldParserT__0               = 1
	GoldParserT__1               = 2
	GoldParserT__2               = 3
	GoldParserT__3               = 4
	GoldParserT__4               = 5
	GoldParserT__5               = 6
	GoldParserT__6               = 7
	GoldParserT__7               = 8
	GoldParserT__8               = 9
	GoldParserT__9               = 10
	GoldParserT__10              = 11
	GoldParserT__11              = 12
	GoldParserT__12              = 13
	GoldParserPARAMETER_MODIFIER = 14
	GoldParserWHITESPACE         = 15
	GoldParserINT_LITERAL        = 16
	GoldParserDEICMAL_LITERAL    = 17
	GoldParserSTRING_LITERAL     = 18
	GoldParserID                 = 19
)

// GoldParser rules.
const (
	GoldParserRULE_goldProg                = 0
	GoldParserRULE_goldDefinition          = 1
	GoldParserRULE_goldClassDefinition     = 2
	GoldParserRULE_goldModuleDefinition    = 3
	GoldParserRULE_goldProcedureDefinition = 4
	GoldParserRULE_goldFunctionDefinition  = 5
	GoldParserRULE_parameterDefinition     = 6
	GoldParserRULE_statement               = 7
	GoldParserRULE_variableDefinition      = 8
	GoldParserRULE_varType                 = 9
)

// IGoldProgContext is an interface to support dynamic dispatch.
type IGoldProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllGoldDefinition() []IGoldDefinitionContext
	GoldDefinition(i int) IGoldDefinitionContext

	// IsGoldProgContext differentiates from other interfaces.
	IsGoldProgContext()
}

type GoldProgContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGoldProgContext() *GoldProgContext {
	var p = new(GoldProgContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldProg
	return p
}

func InitEmptyGoldProgContext(p *GoldProgContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldProg
}

func (*GoldProgContext) IsGoldProgContext() {}

func NewGoldProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoldProgContext {
	var p = new(GoldProgContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoldParserRULE_goldProg

	return p
}

func (s *GoldProgContext) GetParser() antlr.Parser { return s.parser }

func (s *GoldProgContext) EOF() antlr.TerminalNode {
	return s.GetToken(GoldParserEOF, 0)
}

func (s *GoldProgContext) AllGoldDefinition() []IGoldDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IGoldDefinitionContext); ok {
			len++
		}
	}

	tst := make([]IGoldDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IGoldDefinitionContext); ok {
			tst[i] = t.(IGoldDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *GoldProgContext) GoldDefinition(i int) IGoldDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoldDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoldDefinitionContext)
}

func (s *GoldProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoldProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoldProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.EnterGoldProg(s)
	}
}

func (s *GoldProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.ExitGoldProg(s)
	}
}

func (p *GoldParser) GoldProg() (localctx IGoldProgContext) {
	localctx = NewGoldProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GoldParserRULE_goldProg)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&3186) != 0) {
		{
			p.SetState(20)
			p.GoldDefinition()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.Match(GoldParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGoldDefinitionContext is an interface to support dynamic dispatch.
type IGoldDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	GoldClassDefinition() IGoldClassDefinitionContext
	GoldModuleDefinition() IGoldModuleDefinitionContext
	GoldFunctionDefinition() IGoldFunctionDefinitionContext
	GoldProcedureDefinition() IGoldProcedureDefinitionContext

	// IsGoldDefinitionContext differentiates from other interfaces.
	IsGoldDefinitionContext()
}

type GoldDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGoldDefinitionContext() *GoldDefinitionContext {
	var p = new(GoldDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldDefinition
	return p
}

func InitEmptyGoldDefinitionContext(p *GoldDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldDefinition
}

func (*GoldDefinitionContext) IsGoldDefinitionContext() {}

func NewGoldDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoldDefinitionContext {
	var p = new(GoldDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoldParserRULE_goldDefinition

	return p
}

func (s *GoldDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *GoldDefinitionContext) GoldClassDefinition() IGoldClassDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoldClassDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoldClassDefinitionContext)
}

func (s *GoldDefinitionContext) GoldModuleDefinition() IGoldModuleDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoldModuleDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoldModuleDefinitionContext)
}

func (s *GoldDefinitionContext) GoldFunctionDefinition() IGoldFunctionDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoldFunctionDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoldFunctionDefinitionContext)
}

func (s *GoldDefinitionContext) GoldProcedureDefinition() IGoldProcedureDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoldProcedureDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoldProcedureDefinitionContext)
}

func (s *GoldDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoldDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoldDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.EnterGoldDefinition(s)
	}
}

func (s *GoldDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.ExitGoldDefinition(s)
	}
}

func (p *GoldParser) GoldDefinition() (localctx IGoldDefinitionContext) {
	localctx = NewGoldDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GoldParserRULE_goldDefinition)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case GoldParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(27)
			p.GoldClassDefinition()
		}

	case GoldParserT__3:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(28)
			p.GoldModuleDefinition()
		}

	case GoldParserT__9, GoldParserT__10:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(29)
			p.GoldFunctionDefinition()
		}

	case GoldParserT__4, GoldParserT__5:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(30)
			p.GoldProcedureDefinition()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGoldClassDefinitionContext is an interface to support dynamic dispatch.
type IGoldClassDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// GetParentClass returns the parentClass token.
	GetParentClass() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// SetParentClass sets the parentClass token.
	SetParentClass(antlr.Token)

	// Getter signatures
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode

	// IsGoldClassDefinitionContext differentiates from other interfaces.
	IsGoldClassDefinitionContext()
}

type GoldClassDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser      antlr.Parser
	name        antlr.Token
	parentClass antlr.Token
}

func NewEmptyGoldClassDefinitionContext() *GoldClassDefinitionContext {
	var p = new(GoldClassDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldClassDefinition
	return p
}

func InitEmptyGoldClassDefinitionContext(p *GoldClassDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldClassDefinition
}

func (*GoldClassDefinitionContext) IsGoldClassDefinitionContext() {}

func NewGoldClassDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoldClassDefinitionContext {
	var p = new(GoldClassDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoldParserRULE_goldClassDefinition

	return p
}

func (s *GoldClassDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *GoldClassDefinitionContext) GetName() antlr.Token { return s.name }

func (s *GoldClassDefinitionContext) GetParentClass() antlr.Token { return s.parentClass }

func (s *GoldClassDefinitionContext) SetName(v antlr.Token) { s.name = v }

func (s *GoldClassDefinitionContext) SetParentClass(v antlr.Token) { s.parentClass = v }

func (s *GoldClassDefinitionContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(GoldParserID)
}

func (s *GoldClassDefinitionContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(GoldParserID, i)
}

func (s *GoldClassDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoldClassDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoldClassDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.EnterGoldClassDefinition(s)
	}
}

func (s *GoldClassDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.ExitGoldClassDefinition(s)
	}
}

func (p *GoldParser) GoldClassDefinition() (localctx IGoldClassDefinitionContext) {
	localctx = NewGoldClassDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GoldParserRULE_goldClassDefinition)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(33)
		p.Match(GoldParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(34)

		var _m = p.Match(GoldParserID)

		localctx.(*GoldClassDefinitionContext).name = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GoldParserT__1 {
		{
			p.SetState(35)
			p.Match(GoldParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(36)

			var _m = p.Match(GoldParserID)

			localctx.(*GoldClassDefinitionContext).parentClass = _m
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(37)
			p.Match(GoldParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGoldModuleDefinitionContext is an interface to support dynamic dispatch.
type IGoldModuleDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// Getter signatures
	ID() antlr.TerminalNode

	// IsGoldModuleDefinitionContext differentiates from other interfaces.
	IsGoldModuleDefinitionContext()
}

type GoldModuleDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
}

func NewEmptyGoldModuleDefinitionContext() *GoldModuleDefinitionContext {
	var p = new(GoldModuleDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldModuleDefinition
	return p
}

func InitEmptyGoldModuleDefinitionContext(p *GoldModuleDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldModuleDefinition
}

func (*GoldModuleDefinitionContext) IsGoldModuleDefinitionContext() {}

func NewGoldModuleDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoldModuleDefinitionContext {
	var p = new(GoldModuleDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoldParserRULE_goldModuleDefinition

	return p
}

func (s *GoldModuleDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *GoldModuleDefinitionContext) GetName() antlr.Token { return s.name }

func (s *GoldModuleDefinitionContext) SetName(v antlr.Token) { s.name = v }

func (s *GoldModuleDefinitionContext) ID() antlr.TerminalNode {
	return s.GetToken(GoldParserID, 0)
}

func (s *GoldModuleDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoldModuleDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoldModuleDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.EnterGoldModuleDefinition(s)
	}
}

func (s *GoldModuleDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.ExitGoldModuleDefinition(s)
	}
}

func (p *GoldParser) GoldModuleDefinition() (localctx IGoldModuleDefinitionContext) {
	localctx = NewGoldModuleDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GoldParserRULE_goldModuleDefinition)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(GoldParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)

		var _m = p.Match(GoldParserID)

		localctx.(*GoldModuleDefinitionContext).name = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGoldProcedureDefinitionContext is an interface to support dynamic dispatch.
type IGoldProcedureDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// Get_parameterDefinition returns the _parameterDefinition rule contexts.
	Get_parameterDefinition() IParameterDefinitionContext

	// Get_statement returns the _statement rule contexts.
	Get_statement() IStatementContext

	// Set_parameterDefinition sets the _parameterDefinition rule contexts.
	Set_parameterDefinition(IParameterDefinitionContext)

	// Set_statement sets the _statement rule contexts.
	Set_statement(IStatementContext)

	// GetParams returns the params rule context list.
	GetParams() []IParameterDefinitionContext

	// GetStatements returns the statements rule context list.
	GetStatements() []IStatementContext

	// SetParams sets the params rule context list.
	SetParams([]IParameterDefinitionContext)

	// SetStatements sets the statements rule context list.
	SetStatements([]IStatementContext)

	// Getter signatures
	ID() antlr.TerminalNode
	AllParameterDefinition() []IParameterDefinitionContext
	ParameterDefinition(i int) IParameterDefinitionContext
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsGoldProcedureDefinitionContext differentiates from other interfaces.
	IsGoldProcedureDefinitionContext()
}

type GoldProcedureDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser               antlr.Parser
	name                 antlr.Token
	_parameterDefinition IParameterDefinitionContext
	params               []IParameterDefinitionContext
	_statement           IStatementContext
	statements           []IStatementContext
}

func NewEmptyGoldProcedureDefinitionContext() *GoldProcedureDefinitionContext {
	var p = new(GoldProcedureDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldProcedureDefinition
	return p
}

func InitEmptyGoldProcedureDefinitionContext(p *GoldProcedureDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoldParserRULE_goldProcedureDefinition
}

func (*GoldProcedureDefinitionContext) IsGoldProcedureDefinitionContext() {}

func NewGoldProcedureDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoldProcedureDefinitionContext {
	var p = new(GoldProcedureDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoldParserRULE_goldProcedureDefinition

	return p
}

func (s *GoldProcedureDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *GoldProcedureDefinitionContext) GetName() antlr.Token { return s.name }

func (s *GoldProcedureDefinitionContext) SetName(v antlr.Token) { s.name = v }

func (s *GoldProcedureDefinitionContext) Get_parameterDefinition() IParameterDefinitionContext {
	return s._parameterDefinition
}

func (s *GoldProcedureDefinitionContext) Get_statement() IStatementContext { return s._statement }

func (s *GoldProcedureDefinitionContext) Set_parameterDefinition(v IParameterDefinitionContext) {
	s._parameterDefinition = v
}

func (s *GoldProcedureDefinitionContext) Set_statement(v IStatementContext) { s._statement = v }

func (s *GoldProcedureDefinitionContext) GetParams() []IParameterDefinitionContext { return s.params }

func (s *GoldProcedureDefinitionContext) GetStatements() []IStatementContext { return s.statements }

func (s *GoldProcedureDefinitionContext) SetParams(v []IParameterDefinitionContext) { s.params = v }

func (s *GoldProcedureDefinitionContext) SetStatements(v []IStatementContext) { s.statements = v }

func (s *GoldProcedureDefinitionContext) ID() antlr.TerminalNode {
	return s.GetToken(GoldParserID, 0)
}

func (s *GoldProcedureDefinitionContext) AllParameterDefinition() []IParameterDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParameterDefinitionContext); ok {
			len++
		}
	}

	tst := make([]IParameterDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParameterDefinitionContext); ok {
			tst[i] = t.(IParameterDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *GoldProcedureDefinitionContext) ParameterDefinition(i int) IParameterDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterDefinitionContext)
}

func (s *GoldProcedureDefinitionContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *GoldProcedureDefinitionContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *GoldProcedureDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoldProcedureDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoldProcedureDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.EnterGoldProcedureDefinition(s)
	}
}

func (s *GoldProcedureDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoldListener); ok {
		listenerT.ExitGoldProcedureDefinition(s)
	}
}

func (p *GoldParser) GoldProcedureDefinition() (localctx IGoldProcedureDefinitionContext) {
	localctx = NewGoldProcedureDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GoldParserRULE_goldProcedureDefinition)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		_la = p.GetTokenStream().LA(1)

		if !(_la == GoldParserT__4 || _la == GoldParserT__5) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(44)

		var _m = p.Match(GoldParserID)

		localctx.(*GoldProcedureDefinitionContext).name = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GoldParserT__1 {
		{
			p.SetState(45)
			p.Match(GoldParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(46)

			var _x = p.ParameterDefinition()

			localctx.(*GoldProcedureDefinitionContext)._parameterDefinition = _x
		}
		localctx.(*GoldProcedureDefinitionContext).params = append(localctx.(*GoldProcedureDefinitionContext).params, localctx.(*GoldProcedureDefinitionContext)._parameterDefinition)
		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == GoldParserT__6 {
			{
				p.SetState(47)
				p.Match(GoldParserT__6)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(48)

				var _x = p.ParameterDefinition()

				localctx.(*GoldProcedureDefinitionContext)._parameterDefinition = _x
			}
			localctx.(*GoldProcedureDefinitionContext).params = append(localctx.(*GoldProcedureDefinitionContext).params, localctx.(*GoldProcedureDefinitionContext)._parameterDefinition)

		}
		{
			p.SetState(51)
			p.Match(GoldParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GoldParserT__12 {
		{
			p.SetState(55)

			var _x = p.Statement()

			localctx.(*GoldProcedureDefinitionContext)._statement = _x
		}
		localctx.(*GoldProcedureDefinitionContext).statements = append(localctx.(*GoldProcedureDefinitionContext).statements, localctx.(*GoldProcedureDefinitionContext)._statement)

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(61)
		_la = p.GetTokenStream().LA(1)

		if !(_la == GoldParserT__7 || _la == GoldParserT__8) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
